2002-09-19  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m ([WIN -setbackgroundcolor::]): New.
	* Source/x11/XGServerWindow.m ([XGServer -_createBuffer:]): Remove
	setting background pixmap.
	([XGServer -setbackgroundcolor::]): New

	* Source/xlib/XGGState.m
	(-_compositeGState:sourcefromRect:fromRecttoPoint:toPointop:opfraction):
	Convert destination point not rect.
	(-DPSimage:matrix:pixelsWide:pixelsHigh:bitsPerSample:samplesPerPixel:bitsPerPixel:bytesPerRow:isPlanar:hasAlpha:colorSpaceName:data):
	Remove flipping.	

2002-09-19 00:33  Alexander Malmberg  <alexander@malmberg.org>

	* Header/x11/XGInputServer.h, Source/x11/XIMInputServer.m: Track
	all created XIC:s and destroy them explicitly.

2002-09-18 19:59  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.h, Source/art/blit.m, Source/art/composite.m:
	Implement -dissolveGState:fromRect:toPoint:delta:.

2002-09-18 00:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m (-DPSimage:::::::::::): Treat input as
	pre-multiplied in the common case to (really) match xlib/.

2002-09-16 16:43  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m (add_face): Change default rendering hints.

2002-09-16 16:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTGState.h, Source/art/ARTContext.m,
	Source/art/image.m, Source/art/composite.m, Source/art/path.m:
	Handle NSBackingStoreNonretained.

2002-09-14 13:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Keep track of the family name in FTFaceInfo
	so FTFontInfo can set it correctly.

2002-09-14 13:03  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add support for some simple rendering hints
	in .nfont packages.

2002-09-12 02:29  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m (_image_get_color_rgb_8,
	_image_get_color_rgb_cmyk_gray): Fix clamping of y.

2002-09-10 22:11  Alexander Malmberg  <alexander@malmberg.org>
